--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -42,7 +42,9 @@ input{
   box-shadow: inset 2px 2px 6px grey;
 }
 #box{
-  width:1000px;
+  width:960px;
+  position: relative;
+  overflow: hidden;
 }
 #send{
     border: 0;
@@ -57,6 +59,9 @@ input{
     outline: none;
     margin:0;
     padding:0;
+    position: absolute;
+    top:0;
+    right:0;
 }
 #send:hover{
     background-color: rgb(85, 185, 1);
@@ -205,7 +210,7 @@ strong{
   height: 100%;
 } 
 #message{
-  width:70%;
+  width:100%;
 } 
 }
 @media (max-width: 740px) and (max-height: 500px){
